relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_base_fields.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data)
---
{
  "timestamp": 1544719860.0,
  "trace_id": "5b8efff798038103d269b633813fc60c",
  "span_id": "eee19b7ec3c1b174",
  "level": "info",
  "body": "[Filtered]",
  "attributes": {},
  "_meta": {
    "body": {
      "": {
        "rem": [
          [
            "@password:filter",
            "s",
            0,
            10
          ]
        ],
        "len": 43
      }
    }
  }
}
