relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-11.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@creditcard:remove|4242424242424242": {
    "type": "string",
    "value": ""
  },
  "_meta": {
    "@creditcard:remove|4242424242424242": {
      "value": {
        "": {
          "rem": [
            [
              "@creditcard:remove",
              "x",
              0,
              0
            ]
          ],
          "len": 16
        }
      }
    }
  }
}
