relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-12.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@creditcard:mask|4242424242424242": {
    "type": "string",
    "value": "****************"
  },
  "_meta": {
    "@creditcard:mask|4242424242424242": {
      "value": {
        "": {
          "rem": [
            [
              "@creditcard:mask",
              "m",
              0,
              16
            ]
          ],
          "len": 16
        }
      }
    }
  }
}
