relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-13.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@iban|DE89370400440532013000": {
    "type": "string",
    "value": "[iban]"
  },
  "_meta": {
    "@iban|DE89370400440532013000": {
      "value": {
        "": {
          "rem": [
            [
              "@iban",
              "s",
              0,
              6
            ]
          ],
          "len": 22
        }
      }
    }
  }
}
