relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-15.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@iban:remove|DE89370400440532013000": {
    "type": "string",
    "value": ""
  },
  "_meta": {
    "@iban:remove|DE89370400440532013000": {
      "value": {
        "": {
          "rem": [
            [
              "@iban:remove",
              "x",
              0,
              0
            ]
          ],
          "len": 22
        }
      }
    }
  }
}
