relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-16.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@iban:mask|DE89370400440532013000": {
    "type": "string",
    "value": "**********************"
  },
  "_meta": {
    "@iban:mask|DE89370400440532013000": {
      "value": {
        "": {
          "rem": [
            [
              "@iban:mask",
              "m",
              0,
              22
            ]
          ],
          "len": 22
        }
      }
    }
  }
}
