relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-17.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@mac|4a:00:04:10:9b:50": {
    "type": "string",
    "value": "*****************"
  },
  "_meta": {
    "@mac|4a:00:04:10:9b:50": {
      "value": {
        "": {
          "rem": [
            [
              "@mac",
              "m",
              0,
              17
            ]
          ],
          "len": 17
        }
      }
    }
  }
}
