relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-2.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@ip:replace|127.0.0.1": {
    "type": "string",
    "value": "[ip]"
  },
  "_meta": {
    "@ip:replace|127.0.0.1": {
      "value": {
        "": {
          "rem": [
            [
              "@ip:replace",
              "s",
              0,
              4
            ]
          ],
          "len": 9
        }
      }
    }
  }
}
